--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
-    "selenium-webdriver": "^4.0.0-alpha.7"
+    "knex": "^0.21.1",
+    "node-schedule": "^1.3.2",
+    "selenium-webdriver": "^4.0.0-alpha.7",
+    "sqlite3": "^4.2.0",
+    "twit": "^2.2.11"
   }
 }
