--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A bot to automatically duplicate posts between twitter and facebook",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node index.js https://www.facebook.com/pg/colecionadoreshitpost/posts/?ref=page_internal"
   },
   "author": "",
   "license": "MIT",
@@ -12,6 +12,7 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "image-to-base64": "^2.1.0",
     "knex": "^0.21.1",
     "node-schedule": "^1.3.2",
     "selenium-webdriver": "^4.0.0-alpha.7",
